@@ -129,6 +129,15 @@ html_body
     ``parts['html_body']`` contains the HTML ``<body>`` content, less
     the ``<body>`` and ``</body>`` tags themselves.
 
+html_head
+    ``parts['html_head']`` contains the HTML ``<head>`` content, less
+    the stylesheet link and the ``<head>`` and ``</head>`` tags
+    themselves.
+
+html_prolog
+    ``parts['html_prolog]`` contains the XML declaration and the
+    doctype declaration.
+
 html_subtitle
     ``parts['html_subtitle']`` contains the document subtitle,
     including the enclosing ``<h2 class="subtitle">`` & ``</h2>``
